# DEF-rgbtcc

./: .env.serve  AGENTS.md  CLAUDE.md  Dockerfile.serve  NEXT_STEPS.md  PRD.md  README_CUDA_SERVER.md  anima_module.yaml  docker-compose.serve.yml  pyproject.toml
benchmarks/: README.md
configs/: debug.toml  paper.toml
kernels/: README.md
kernels/cuda/: rgbtcc_ops.cu  setup.py
repositories/RGBT-Crowd-Counting/: .gitignore  README.md  test_game.py  train.py
repositories/RGBT-Crowd-Counting/datasets/: crowd.py
repositories/RGBT-Crowd-Counting/models/: dm.py
repositories/RGBT-Crowd-Counting/utils/: regression_trainer.py
scripts/: post_training.sh  push_to_hf.py
scripts/scaffold/: smoke_reference.py
scripts/server/: bootstrap_cuda_server.sh  deploy_to_cuda_server.sh  run_benchmark_suite.sh  validate_assets.py  validate_cuda_runtime.py
src/def_rgbtcc/: __init__.py  config.py  export.py  reference_wrapper.py  serve.py  train.py
src/def_rgbtcc/benchmarking/: __init__.py  latency.py  memory.py  throughput.py
src/def_rgbtcc/datasets/: __init__.py  crowd.py
src/def_rgbtcc/kernels/: __init__.py  acmf_reg_fused.py  spatial_decay_attn.py
src/def_rgbtcc/losses/: __init__.py  bay_loss.py  post_prob.py
src/def_rgbtcc/mlx_port/: __init__.py  spatial_decay.py
src/def_rgbtcc/models/: __init__.py  dm.py
src/def_rgbtcc/training/: __main__.py  evaluation.py  trainer.py
src/def_rgbtcc/validation/: __init__.py  assets.py
tasks/: PRD-001.md  PRD-002.md  PRD-003.md  PRD-004.md  PRD-005.md  PRD-006.md  PRD-007.md  PRD-008.md  PRD-009.md  PRD-010.md  README.md
