[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "def-rgbtcc"
version = "0.1.0"
description = "ANIMA DEF-rgbtcc scaffolding package for RGB-T crowd counting"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "torch>=2.2",
]

[tool.setuptools.packages.find]
where = ["src"]
